--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "express": "4.17.1",
     "mocha": "^9.1.3",
     "nodemon": "2.0.14",
-    "supertest": "^6.1.6"
+    "supertest": "^6.1.6",
+    "csv-parser": "3.0.0",
+    "csv-writer": "1.6.0",
+    "cors": "2.8.5"
   }
 }
